--- a/grubb-calendar.html
+++ b/grubb-calendar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0053)file:///C:/Users/Rob/Downloads/family-calendar_8.html -->
+<!-- saved from url=(0058)file:///C:/Users/Rob/Downloads/grubb-calendar-FINAL_2.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -1255,7 +1255,7 @@
 </head>
 <body>
     <!-- Login Screen -->
-    <div class="login-container hidden" id="loginContainer">
+    <div class="login-container" id="loginContainer">
         <div class="login-box">
             <div class="login-header">
                 <h1>🏠 Grubb</h1>
@@ -1270,7 +1270,7 @@
     </div>
 
     <!-- Main App (hidden until logged in) -->
-    <div class="container" id="mainApp">
+    <div class="container hidden" id="mainApp">
         <div class="header">
         </div>
 
@@ -1585,7 +1585,7 @@
 
     <script>
         // CONFIGURATION 
-const GOOGLE_SHEETS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyPRnoQaoBPVQXufCyazRJtY1tq37zb0ZIoannhy65MiIR1R33T_PcUWsjIQDSBUrYS/exec'; // Paste your Google Apps Script Web App URL here
+const GOOGLE_SHEETS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwjt6l_trdjXOBRTs9tvpIL_UC4hTzHMLYT5L9EAUh_dg9aF8LUlYy2R6gF2M778wlo/exec'; // Paste your Google Apps Script Web App URL here
 
 // Password and session management
 const FAMILY_PASSWORD = 'finlakes';
